# rwr-players-scraper

./: .env.example  Cargo.toml  README.md  README_zhCN.md
.github/workflows/: release.yml
src/: main.rs
