[package]
name = "rwr-players-scraper"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
num_cpus = "1.15.0"
rusqlite = { version = "0.28.0", features = ["bundled"] }
anyhow = "1.0.66"
scraper = "0.13.0"
reqwest = { version = "0.11", features = [] }
tokio = { version = "1", features = ["full"] }
